fix: site nav on mobile

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -138,6 +138,10 @@ nav {
   }
 }
 
+.site-nav {
+  border: none;
+}
+
 #eric-shreve {
   margin-bottom: 10px;
 }
